--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 .top_banner {
   width: 95%;
-  margin: 2%;
+  margin: 1%;
 }
 
 .logo_img{
@@ -8,12 +8,12 @@
   padding-left: 2%;
   padding-top: 2%;
 }
-@media screen and (max-width: 663px){
-  .logo_img{ width: 25% }
+@media screen and (max-width: 510px){
+  .logo_img{ width: 25%; padding-top: 4%; }
 }
 
-@media screen and (max-width: 488px){
-  .logo_img{ width: 48%; }
+@media screen and (max-width: 440px){
+  .logo_img{ width: 48%; padding-top: 1%; padding-bottom: 4%;}
 }
 
 @media screen and (max-width: 385px){
@@ -23,7 +23,8 @@
 .title {
   font-family: sans-serif;
   text-align: right;
-  padding: 2%;
+  padding-top: 4%;
+  padding-bottom: 1%;
   color: #2d3c49;
 }
 
@@ -43,18 +44,21 @@
   padding-top: 3%;
 }
 
-.break {
-  width: 100%;
-  height: 1px;
-  margin: 2%;
-  padding: 2%;
-  color: #7d97ad;
-}
-
+/*this class uses code from Ove Klykken and can be found at:
+http://www.domedia.org/oveklykken/css-thin-horizontal-rule.php*/
 hr.thin {
 height: 3px;
 border: 0;
 color: #7d97ad;
 background-color: #7d97ad;
 width: 95%;
+}
+
+.feat_img {
+  width: 95%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
