--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,6 +42,7 @@
   font-size: 115%;
   padding-bottom: 3%;
   padding-top: 3%;
+  color: #2d3c49;
 }
 
 /*this class uses code from Ove Klykken and can be found at:
@@ -54,11 +55,34 @@ background-color: #7d97ad;
 width: 95%;
 }
 
-.feat_img {
+.main_img {
   width: 95%;
   padding-top: 2%;
   padding-bottom: 2%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.second_title {
+  font-family: sans-serif;
+  text-align: left;
+  font-size: 215%;
+  margin: 3%;
+  color: #7d97ad;
+}
+
+#imagewithcaption {
+  overflow: hidden;
+  float: left;
+  margin-left: 1%;
+  padding: 2%;
+  width: 27%;
+  text-align: center;
+  color: #2d3c49;
+  font-family: sans-serif;
+}
+
+@media screen and (max-width: 385px){
+  #imagewithcaption { width: 95%; }
 }
