--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,16 +4,26 @@
 }
 
 .logo_img{
+  float: left;
   width: 15%;
   padding-left: 2%;
-  padding-top: 2%;
+  padding-top: 5%;
 }
+
+@media screen and (min-width: 774px){
+  .logo_img{ padding-top: 4%; width: 13%; }
+}
+
+@media screen and (min-width: 1069px){
+  .logo_img{ padding-top: 3%; width: 11%; }
+}
+
 @media screen and (max-width: 510px){
-  .logo_img{ width: 25%; padding-top: 4%; }
+  .logo_img{ width: 25%; padding-top: 6%; }
 }
 
 @media screen and (max-width: 440px){
-  .logo_img{ width: 48%; padding-top: 1%; padding-bottom: 4%;}
+  .logo_img{ width: 48%; padding-top: 6%; padding-bottom: 4%;}
 }
 
 @media screen and (max-width: 385px){
@@ -23,7 +33,7 @@
 .title {
   font-family: sans-serif;
   text-align: right;
-  padding-top: 4%;
+  padding-top: 1%;
   padding-bottom: 1%;
   color: #2d3c49;
 }
@@ -40,8 +50,8 @@
 .position {
   font-weight: 600;
   font-size: 115%;
-  padding-bottom: 3%;
-  padding-top: 3%;
+  padding-bottom: 1%;
+  padding-top: 1%;
   color: #2d3c49;
 }
 
@@ -72,7 +82,7 @@ width: 95%;
   color: #7d97ad;
 }
 
-#imagewithcaption {
+.imagewithcaption {
   overflow: hidden;
   float: left;
   margin-left: 1%;
@@ -83,6 +93,6 @@ width: 95%;
   font-family: sans-serif;
 }
 
-@media screen and (max-width: 385px){
-  #imagewithcaption { width: 95%; }
+@media screen and (max-width: 440px){
+  .imagewithcaption { width: 95%; margin-left: 0%; }
 }
